# integer_polyomino

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
docs/: assembly.rst  conf.py  gpmap.rst  index.rst  integer_polyomino.rst
notebooks/: example_genome_metrics_to_hdf.ipynb  example_genome_metrics_to_hdf.py  example_initial_table.ipynb  example_initial_table.py  example_make_figures.ipynb  example_make_figures.py  example_metric_duplicate_run.ipynb  example_metric_duplicate_run.py  example_metric_run.ipynb  example_metric_run.py  example_polyomino_api.ipynb  example_polyomino_api.py  example_visual_GPmap_properties.ipynb  example_visual_GPmap_properties.py  example_visual_genome_metrics.ipynb  example_visual_genome_metrics.py  private_Sainsbury_Presentation.py  quickstart assembly.ipynb  quickstart gpmap.ipynb
src/integer_polyomino/: __init__.py  bindings.cpp  genotype_api.cpp  genotype_core_metrics.cpp  genotype_duplicate.cpp  genotype_generate.cpp  genotype_iofunc.cpp  genotype_mains.cpp  genotype_metrics.cpp  genotype_phenotype.cpp  integer_model.cpp
src/integer_polyomino.egg-info/: PKG-INFO
src/integer_polyomino/assembly/: assembly_api.cpp  bindings.cpp  integer_model.cpp
src/integer_polyomino/assembly/includes/: assembly_api.hpp  integer_model.hpp
src/integer_polyomino/gpmap/: bindings.cpp  core_metrics.cpp  duplicate.cpp  generate.cpp  gpmap_api.cpp  io.cpp  mapping.cpp  metrics.cpp
src/integer_polyomino/gpmap/includes/: core_metrics.hpp  duplicate.hpp  generate.hpp  gpmap_api.hpp  io.hpp  mapping.hpp  metrics.hpp
src/integer_polyomino/includes/: genotype_api.hpp  genotype_duplicate.hpp  genotype_generate.hpp  genotype_iofunc.hpp  genotype_mains.hpp  genotype_metrics.hpp  genotype_phenotype.hpp
src/integer_polyomino/scripts/: graph_topo.py  hdf.py  plotly_utilities.py  python_api.py  test_polyo.py  visual_phenotype.py
tests/: assembly_test.py  test_assembly.cpp  test_cpp.py
